<resources>
    <string name="app_name">Universal Access</string>
    <string name="action_settings">Settings</string>
    <string name="input_remember">Remember Me</string>
    <string name="appToken">Basic Y2xpZW50OnNlY3JldA==</string>>
    <string name="title_activity_registration">Registration</string>
    <string name="createViolation">Create Violation</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="description">Description</string>
    <string name="severity_rate">Severity Rate</string>
    <string name="location">City</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="age">age</string>
    <string name="getCityUrl">http://univers-alaccess-g9.herokuapp.com/api/v1/cities</string>
    <string name="createViolationURL">http://univers-alaccess-g9.herokuapp.com/api/v1/violations</string>
    <string name="getAllViolationsURL">http://ec2-54-69-10-151.us-west-2.compute.amazonaws.com:8080/universal-access/rest/violations?closed=false</string>
    <string name="createUser">http://univers-alaccess-g9.herokuapp.com/api/v1/registrations</string>
    <string name="getUserTokenUrl">http://univers-alaccess-g9.herokuapp.com//oauth/token</string>
    <string name="getUserURL">http://univers-alaccess-g9.herokuapp.com/api/v1/users/me</string>
    <string name="getTypesURL">http://univers-alaccess-g9.herokuapp.com/api/v1/types</string>
    <string name="type">Type</string>
    <string name="neighbourhood">Neighbourhood</string>
    <string name="district">District</string>
    <string name="getDisctrictURL">http://univers-alaccess-g9.herokuapp.com/api/v1/districts</string>
    <string name="getNeighbourhoodURL">http://univers-alaccess-g9.herokuapp.com/api/v1/neighborhoods</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="advancedsearch">Advanced Search</string>
    <string name="getTagURL">http://univers-alaccess-g9.herokuapp.com/api/v1/tags</string>
    <string name="tags">Tags</string>
    <string name="uploadURL">http://univers-alaccess-g9.herokuapp.com/api/v1/uploads</string>


    <string-array name="gender">
        <item>male</item>
        <item>female</item>
    </string-array>
</resources>
