<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sweng.universalaccess.CreateViolation">

    <android.support.v7.widget.AppCompatTextView
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/violation_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/violation_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"/>
    
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/violation_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/violation_button_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createViolation"/>

</LinearLayout>
