<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/listview_selector">

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="sans" />


    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:adjustViewBounds="true"
        android:clickable="true" />

    <TextView
        android:id="@+id/single_violation_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image" />

    <LinearLayout
        android:id="@+id/threeItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/single_violation_description"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/single_violation_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/city"
            android:textColor="@color/textColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/single_violation_district"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/district"
            android:textColor="@color/textColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/single_violation_neighborhood"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/neighbourhood"
            android:textColor="@color/textColor"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/threeItems"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/single_violation_city_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/city"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/single_violation_district_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/district"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/single_violation_neighborhood_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/neighbourhood"
            android:textColor="@color/textColor" />
    </LinearLayout>

</RelativeLayout>